--- a/code1.html
+++ b/code1.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Hello!</title>
+        <title>Hello!
+        </title>
     </head>
-    <body>Hello world!</body>
+    <body>
+        <h1>Welcome to my page!</h1>
+        Hello world!
+    </body>
 </html>
